# SimplePipeline

./: .gitignore  CMakeLists.txt  README.md  controller.cpp  controller.h  createprojectdialog.cpp  createprojectdialog.h  databasemanager.cpp  databasemanager.h  mainwindow.cpp  mainwindow.h  resources.qrc
models/: projectmodel.cpp  projectmodel.h
sql/: setup_db.sql
